[project]
name = "heavy-tail-diffusion"
version = "0.1.0"
description = "Single-mode and multi-mode heavy-tail flow-matching experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "torch>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
